wrote out 1.2; improved 1.3

--- a/Problem Set 1.ipynb
+++ b/Problem Set 1.ipynb
@@ -9,15 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "\n",
     "import scipy\n",
     "import functools\n",
     "\n",
     "import numpy as np\n",
     "np.random.seed(0)\n",
+    "\n",
+    "from typing import List\n",
     "\n",
     "import random\n",
     "import math\n",
@@ -93,8 +97,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Assumptions:\n",
+    "    1. The penny doesn't bounce off the board.\n",
+    "    2. The penny bounces independently of where it lands on the board.\n",
+    "\n",
+    "The penny has a radius of $\\frac{0.75}{2} = 0.375$ inches, and the penny must land entirely within the board, so the center of the penny must land greater than radius=0.375 inches away from the edge of the board. This leaves a square of \"safe\" landings for the center of the penny; this square has side-lengths of $2.25 - radius = 2.25-0.375 = 1.875$. To calculate the odds of the center of the penny landing within the \"safe\" square, given the assumptions listed above, we take the area of the smaller \"safe\" square and divide it by the area of the board. This works out to be $$\\approx 0.694$$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -103,13 +118,14 @@
        "0.6944444444444444"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "((2.25-(.75/2))**2)/(2.25**2)"
+    "r = (.75/2)\n",
+    "((2.25-r)**2)/(2.25**2)"
    ]
   },
   {
@@ -142,58 +158,106 @@
     "* $J=3, N=4$\n",
     "* $J=15, N=21$\n",
     "\n",
-    "Given the hint, I'd guess that 3 out of 4 people at CAAI have names that start with J. On the other hand, a quick glance at your website shows 11 people in total, and 5 with names that start with \"J\". With that in mind, I ran an extra simulation to be sure, and my guess appears to be correct."
+    "Given the hint, I'd guess that 3 out of 4 people at CAAI have names that start with J. On the other hand, a quick glance at your website shows 11 people in total, and 5 with names that start with \"J\"."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for j in range(2,51):\n",
-    "#     for n in range(j+1, 51):\n",
-    "#         if 1/2 == (j/n)*(\n",
-    "#             (j-1)/(n-1)\n",
-    "#             ):\n",
-    "#                 print(f'J={j}, N={n} is a valid possibility')"
+    "def is_sol(n:int, j:int) -> bool:\n",
+    "    if j > n:\n",
+    "        return False\n",
+    "    try:\n",
+    "        p = (j / n) * (j - 1) / (n - 1)\n",
+    "    except ZeroDivisionError:\n",
+    "        return False\n",
+    "    return np.isclose(p, 1 / 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def sim_choosing_j_names(n:int, j:int, sample_size:int):\n",
-    "    \n",
-    "#     # create vector of 0 & 1, indicating whether an individual has a name starting with J\n",
-    "#     people=[1]*j + [0]*(n-j) \n",
-    "#     num_people = len(people)\n",
-    "    \n",
-    "#     # randomly order\n",
-    "#     np.random.shuffle(people)\n",
-    "    \n",
-    "#     met_two_j_names_counter = 0\n",
-    "#     for i in range(sample_size):\n",
-    "#         people_met = random.sample(population=people, k=2)\n",
-    "#         both_j_names = sum(people_met)==2\n",
-    "#         met_two_j_names_counter += both_j_names\n",
-    "        \n",
-    "#     return met_two_j_names_counter / sample_size"
+    "def compute_feasible_array(max_n=50) -> pd.DataFrame:\n",
+    "    q3_results = pd.DataFrame(\n",
+    "        [\n",
+    "            [is_sol(n=n, j=j) for n in range(max_n)] \n",
+    "        for j in range(50)\n",
+    "            ]\n",
+    "    )\n",
+    "    return q3_results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>4</th>\n",
+       "      <th>21</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       4      21\n",
+       "3    True  False\n",
+       "15  False   True"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# for j in range(2,22):\n",
-    "#     for n in range(j+1, 22):\n",
-    "#         approx_prob_meeting_two_js = sim_choosing_j_names(n=n, j=j, sample_size=100000)\n",
-    "#         if math.isclose(approx_prob_meeting_two_js, .5, rel_tol=0.01): # if approx probability is within 1% of 0.5\n",
-    "#             print(f'J={j}, N={n} is a valid possibility \\n Approx prob = {approx_prob_meeting_two_js}')"
+    "def fetch_solutions(max_n=50) -> List[tuple]:\n",
+    "    q3_results = compute_feasible_array(max_n=max_n)\n",
+    "    cols_to_keep = q3_results.sum() >= 1\n",
+    "    rows_to_keep = q3_results.sum(axis=1) >= 1\n",
+    "    sols = q3_results[rows_to_keep].loc[:, cols_to_keep]\n",
+    "    return sols\n",
+    "\n",
+    "fetch_solutions()"
    ]
   },
   {
@@ -251337,10 +251401,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "7fe840cb6503e6e121073d91483f2f283b736cdf5bfd63e897a03cab3c1751ec"
+   "hash": "86b8f42ab0c3f2e1fca5fd97f35a954d1099343dded17a6bd4e651a81d412394"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('base': conda)",
+   "display_name": "Python 3.9.7",
    "language": "python",
    "name": "python3"
   },
@@ -251354,7 +251418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
